--- a/makeproject/templates/kaggle/notebooks/plots.ipynb
+++ b/makeproject/templates/kaggle/notebooks/plots.ipynb
@@ -29,7 +29,7 @@
      "metadata": {},
      "outputs": [],
      "input": [
-      "from __future__ import division, absolute_import, print_function, unicode_literals\n",
+      "from __future__ import division, print_function\n",
       "import numpy as np\n",
       "import pandas as pd"
      ],
